--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         body {
-            background-color: #e0e0e0;
+            background-color: #525659; /* Fondo gris oscuro de la app */
             color: var(--text-color);
             font-family: var(--font-main);
             margin: 0;
@@ -39,7 +39,7 @@
 
         /* Sidebar */
         .sidebar {
-            width: 320px;
+            width: 300px;
             background-color: var(--sidebar-bg);
             border-right: 1px solid #c9bda8;
             display: flex;
@@ -51,7 +51,7 @@
         }
 
         .sidebar-header {
-            padding: 25px 20px;
+            padding: 20px;
             background: rgba(139, 69, 19, 0.1);
             border-bottom: 1px solid rgba(139, 69, 19, 0.2);
         }
@@ -59,7 +59,7 @@
         .sidebar-header h2 {
             margin: 0;
             font-family: var(--font-ui);
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             color: var(--accent-color);
             font-weight: 700;
         }
@@ -81,10 +81,10 @@
             text-align: left;
             background: none;
             border: none;
-            padding: 12px 15px;
+            padding: 10px 15px;
             cursor: pointer;
             font-family: var(--font-ui);
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             color: #5d4037;
             border-radius: 6px;
             margin-bottom: 4px;
@@ -121,18 +121,19 @@
             background-color: var(--bg-color);
             width: 100%;
             max-width: var(--page-width);
-            min-height: 95vh;
+            min-height: 95vh; /* Asegura que cubra la pantalla */
             padding: 70px 80px;
-            box-shadow: 0 0 25px rgba(0,0,0,0.4);
+            box-shadow: 0 0 25px rgba(0,0,0,0.5);
             margin-bottom: 80px;
             position: relative;
-            display: block; 
+            display: block; /* Importante para evitar colapsos */
+            overflow: hidden; /* Evita que contenido flote fuera */
         }
 
         /* Typography */
         h1.book-title {
             text-align: center;
-            font-size: 2.8em;
+            font-size: 2.5em;
             margin-top: 40px;
             margin-bottom: 20px;
             color: #222;
@@ -142,7 +143,7 @@
 
         h2.book-author {
             text-align: center;
-            font-size: 1.4em;
+            font-size: 1.3em;
             color: #666;
             font-weight: 300;
             font-style: italic;
@@ -150,7 +151,7 @@
         }
 
         h2.chapter-title {
-            font-size: 2.2em;
+            font-size: 2em;
             color: var(--accent-color);
             border-bottom: 3px double #dcc;
             padding-bottom: 15px;
@@ -160,7 +161,7 @@
         }
 
         h3 {
-            font-size: 1.4em;
+            font-size: 1.3em;
             margin-top: 40px;
             margin-bottom: 15px;
             color: #4a4a4a;
@@ -170,7 +171,7 @@
         
         h4 {
             font-size: 1.1em;
-            margin-top: 30px;
+            margin-top: 25px;
             margin-bottom: 10px;
             color: #5d4037;
             font-weight: bold;
@@ -197,7 +198,7 @@
         .dedication {
             text-align: right;
             font-style: italic;
-            margin-top: 100px;
+            margin-top: 80px;
             margin-right: 40px;
             font-size: 1.1em;
             color: #555;
@@ -217,12 +218,11 @@
 
         .footnotes {
             margin-top: 60px;
-            padding-top: 20px;
+            padding: 20px;
             border-top: 1px solid #ccc;
             font-size: 0.85em;
             color: #444;
-            background-color: rgba(0,0,0,0.02);
-            padding: 20px;
+            background-color: rgba(255,255,255,0.4);
             border-radius: 4px;
         }
         
@@ -241,21 +241,21 @@
         /* Controls */
         .controls {
             position: fixed;
-            bottom: 30px;
-            right: 30px;
+            bottom: 20px;
+            right: 20px;
             background: rgba(255,255,255,0.95);
-            padding: 10px;
+            padding: 8px;
             border-radius: 50px;
             box-shadow: 0 5px 20px rgba(0,0,0,0.15);
             display: flex;
-            gap: 10px;
+            gap: 8px;
             z-index: 2000;
             backdrop-filter: blur(5px);
         }
 
         .control-btn {
-            width: 40px;
-            height: 40px;
+            width: 36px;
+            height: 36px;
             border-radius: 50%;
             border: 1px solid #eee;
             background: white;
